# scrubber

./: .gitmodules  CMakeLists.txt  README.md
contrib/: CMakeLists.txt
src/: CMakeLists.txt  bot.cpp  bot.h  main.cpp
